# orchestrator-suite

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
CAPTURING_last version/: ArUco.py  CITATION.cff  PrinterControl2.py  README.md  disk_planner_xy.py  pyproject.toml
CAPTURING_last version/out_xy/570646/: meta.json  polygon_mm.json  route.gcode  tiles.csv
CAPTURING_last version/src/capturing_disk/: __init__.py  cli.py  disk_planner_xy.py  gui_planner.py  models.py  printer_interface.py  printercontrol2_integration.py  printercontrol2_integration.py.bak
CAPTURING_last version/src/capturing_disk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
CAPTURING_last version/src/capturing_disk/adapters/: __init__.py  gcode_adapter.py  legacy_adapter.py
CAPTURING_last version/tests/: conftest.py  test_planner.py
Live_Capture_AF_close_OK/: CITATION.cff  LICENSE  README.md  __init__.py  af_mapping.py  constants.py  edsdk_runtime.py  eos_utility.py  gen_edsdk_from_headers.py  pyproject.toml  ruff.toml
Live_Capture_AF_close_OK/Header/: EDSDK.h  EDSDKTypes.h
Live_Capture_AF_close_OK/tests/: test_imports.py
Live_Capture_AF_close_OK/tools/: inject_headers.py  translate_repo.py
Live_Capture_AF_close_OK/ui/: qt_scrollable.py  tk_scrollable.py
orchestrator/: __init__.py  api.py  clients.py  config.py  events.py
services/: camera_adapter.py  planner_adapter.py  printer_adapter.py
tests/: test_clients_retry.py  test_orchestrator_api.py  test_project_imports.py
tools/: inject_headers.py  translate_repo.py
ui/: qt_scrollable.py  tk_scrollable.py
