[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capturing-disk"
version = "0.1.0"
description = "Planner ↔ Printer integration for disk image capture"
authors = [{name = "Dr. Zulfiyor Bakhtiyorov"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.8",
  "pillow>=10.0",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["E203", "E266", "E501", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
